syntax = "proto3";

package pkg;

import "google/protobuf/timestamp.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
  google.protobuf.Timestamp created_at = 2 [(gogoproto.nullable) = false];;
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.nullable) = false];;
  google.protobuf.Timestamp deleted_at = 4;
}